# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name                        = "maulingmonkey-windows-sparse-box"
version                     = "0.0.0-git"
publish                     = false
edition                     = "2021"

license                     = "Apache-2.0 OR MIT"
authors                     = ["MaulingMonkey <git@maulingmonkey.com>"]
repository                  = "https://github.com/MaulingMonkey/windows-sparse-box"

readme                      = "Readme.md"
description                 = "Huge/sparse box abstraction experiments on Windows"
categories                  = ["memory-management"] # https://crates.io/category_slugs



[dependencies]
bytemuck.version = "1"
bytemuck.features = ["derive"]

winapi.version = "0.3"
winapi.features = [
    "std",

    # shared
    "basetsd",
    "ntdef",

    # um
    "errhandlingapi",
    "handleapi",
    "memoryapi",
    "sysinfoapi",
    "winbase",
    "winnt",
]



[profile.release]
debug = true
